Refine filter handling for product search