@@ -4,36 +4,25 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.time.Duration;
-import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Deque;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
-import java.util.Set;
-import java.util.stream.Stream;
+import java.util.Optional;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
-import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.open4goods.model.product.Product;
 import org.open4goods.model.vertical.VerticalConfig;
 import org.open4goods.nudgerfrontapi.config.properties.ApiProperties;
-import org.open4goods.nudgerfrontapi.dto.product.ProductDto;
 import org.open4goods.nudgerfrontapi.dto.search.AggregationBucketDto;
 import org.open4goods.nudgerfrontapi.dto.search.AggregationRequestDto;
 import org.open4goods.nudgerfrontapi.dto.search.AggregationRequestDto.Agg;
@@ -42,8 +31,6 @@ import org.open4goods.nudgerfrontapi.dto.search.FilterRequestDto;
 import org.open4goods.nudgerfrontapi.dto.search.FilterRequestDto.Filter;
 import org.open4goods.nudgerfrontapi.dto.search.FilterRequestDto.FilterField;
 import org.open4goods.nudgerfrontapi.dto.search.FilterRequestDto.FilterOperator;
-import org.open4goods.nudgerfrontapi.localization.DomainLanguage;
-import org.open4goods.nudgerfrontapi.service.ProductMappingService;
 import org.open4goods.services.productrepository.services.ProductRepository;
 import org.open4goods.verticals.VerticalsConfigService;
 import org.springframework.data.domain.PageRequest;
@@ -54,15 +41,14 @@ import org.springframework.data.elasticsearch.core.SearchHit;
 import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.data.elasticsearch.core.SearchHitsImpl;
 import org.springframework.data.elasticsearch.core.TotalHitsRelation;
-import org.springframework.data.elasticsearch.core.query.Criteria;
-import org.springframework.data.elasticsearch.core.query.Criteria.CriteriaEntry;
-import org.springframework.data.elasticsearch.core.query.CriteriaQuery;
 
 import co.elastic.clients.elasticsearch._types.FieldValue;
 import co.elastic.clients.elasticsearch._types.aggregations.Aggregate;
-import co.elastic.clients.elasticsearch._types.aggregations.LongTermsBucket;
 import co.elastic.clients.elasticsearch._types.aggregations.StringTermsBucket;
-import org.springframework.data.elasticsearch.core.query.Field;
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.elasticsearch._types.query_dsl.TermQuery;
+import co.elastic.clients.elasticsearch._types.query_dsl.TermsQuery;
 
 /**
  * Unit tests for {@link SearchService} focusing on filter application.
@@ -89,8 +75,7 @@ class SearchServiceTest {
     @BeforeEach
     void setUp() {
         lenient().when(apiProperties.getResourceRootPath()).thenReturn("https://assets.nudger.test");
-        lenient().when(repository.getRecentPriceQuery())
-                .thenAnswer(invocation -> new Criteria("offersCount").greaterThan(0));
+        lenient().when(repository.expirationClause()).thenReturn(0L);
         searchService = new SearchService(repository, verticalsConfigService, productMappingService, apiProperties);
     }
 
@@ -110,7 +95,8 @@ class SearchServiceTest {
         when(repository.search(any(NativeQuery.class), eq(ProductRepository.MAIN_INDEX_NAME))).thenReturn(searchHits);
 
         Filter priceFilter = new Filter(FilterField.price.fieldPath(), FilterOperator.range, null, 100.0, 400.0);
-        Filter conditionFilter = new Filter(FilterField.condition.fieldPath(), FilterOperator.term, List.of("NEW"), null, null);
+        Filter conditionFilter = new Filter(FilterField.condition.fieldPath(), FilterOperator.term, List.of("NEW"), null,
+                null);
         FilterRequestDto filters = new FilterRequestDto(List.of(priceFilter, conditionFilter), List.of());
 
         Agg aggregation = new Agg("byOffers", FilterField.offersCount.fieldPath(),
@@ -123,185 +109,67 @@ class SearchServiceTest {
         assertThat(result.aggregations()).hasSize(1);
         assertThat(result.aggregations().get(0).buckets()).hasSize(1);
         assertThat(result.aggregations().get(0).buckets().get(0).count()).isEqualTo(1L);
-
-        ArgumentCaptor<NativeQuery> queryCaptor = ArgumentCaptor.forClass(NativeQuery.class);
-        org.mockito.Mockito.verify(repository).search(queryCaptor.capture(), eq(ProductRepository.MAIN_INDEX_NAME));
-        NativeQuery builtQuery = queryCaptor.getValue();
-        Criteria builtCriteria = ((CriteriaQuery) builtQuery.getSpringDataQuery()).getCriteria();
-        var fieldNames = builtCriteria.getCriteriaChain().stream()
-                .map(criteria -> criteria.getField() == null ? null : criteria.getField().getName())
-                .filter(Objects::nonNull)
-                .collect(Collectors.toSet());
-        assertThat(fieldNames).contains("price.minPrice.price");
-        assertThat(fieldNames).contains("price.conditions");
     }
 
     @Test
-    void searchAllowsExplicitExcludedFilterToOverrideDefaultBehaviour() {
-        Pageable pageable = PageRequest.of(0, 10);
+    void defaultQueriesExcludeModeratedProducts() {
+        Query query = searchService.buildProductSearchQuery(null, null, null, true);
+        List<Query> filters = extractFilters(query);
 
-        SearchHits<Product> emptyHits = buildSearchHits(List.of());
-        Product excludedProduct = new Product(2L);
-        excludedProduct.setExcluded(true);
-        excludedProduct.setId(2L);
-        SearchHits<Product> excludedHits = buildSearchHits(List.of(excludedProduct));
+        assertThat(filters).anySatisfy(filter -> assertThat(isTermWithValue(filter, EXCLUDED_FIELD, false)).isTrue());
+    }
 
-        when(repository.search(any(NativeQuery.class), eq(ProductRepository.MAIN_INDEX_NAME)))
-                .thenReturn(emptyHits, excludedHits);
-
-        SearchService.SearchResult defaultResult = searchService.search(pageable, null, null, null, null);
-        assertThat(defaultResult.hits().getSearchHits()).isEmpty();
-
+    @Test
+    void overrideQueriesOmitDefaultExclusionAndKeepCustomFilters() {
         Filter excludedFilter = new Filter(FilterField.excludedCauses.fieldPath(), FilterOperator.term,
                 List.of("MODERATION"), null, null);
-        FilterRequestDto adminFilters = new FilterRequestDto(List.of(excludedFilter), List.of());
+        FilterRequestDto normalized = searchService
+                .normalizeFilters(new FilterRequestDto(List.of(excludedFilter), List.of()));
 
-        SearchService.SearchResult overriddenResult = searchService.search(pageable, null, null, null, adminFilters);
-        assertThat(overriddenResult.hits().getSearchHits()).hasSize(1);
+        Query query = searchService.buildProductSearchQuery(null, null, normalized, false);
+        List<Query> filters = extractFilters(query);
 
-        ArgumentCaptor<NativeQuery> queryCaptor = ArgumentCaptor.forClass(NativeQuery.class);
-        org.mockito.Mockito.verify(repository, times(2)).search(queryCaptor.capture(), eq(ProductRepository.MAIN_INDEX_NAME));
-
-        List<NativeQuery> capturedQueries = queryCaptor.getAllValues();
-        Criteria defaultCriteria = ((CriteriaQuery) capturedQueries.get(0).getSpringDataQuery()).getCriteria();
-        assertThat(hasExcludedClauseWithValue(defaultCriteria, false)).isTrue();
-
-        Criteria overriddenCriteria = ((CriteriaQuery) capturedQueries.get(1).getSpringDataQuery()).getCriteria();
-        assertThat(hasExcludedClauseWithValue(overriddenCriteria, false)).isFalse();
-        assertThat(hasFieldClauseWithValue(overriddenCriteria, FilterField.excludedCauses.fieldPath(), "MODERATION"))
-                .isTrue();
+        assertThat(filters).noneMatch(filter -> isTermWithValue(filter, EXCLUDED_FIELD, false));
+        assertThat(filters).anySatisfy(filter -> assertThat(isTermsQueryWithValue(filter,
+                FilterField.excludedCauses.fieldPath(), "MODERATION")).isTrue());
     }
 
     @Test
-    void filterGroupsAreCombinedWithAndAcrossGroups() {
-        Pageable pageable = PageRequest.of(0, 5);
+    void normalizeFiltersMergesRangesWithinMustClauses() {
+        Filter lower = new Filter(FilterField.price.fieldPath(), FilterOperator.range, null, 0.0, null);
+        Filter upper = new Filter(FilterField.price.fieldPath(), FilterOperator.range, null, null, 500.0);
 
-        when(repository.search(any(NativeQuery.class), eq(ProductRepository.MAIN_INDEX_NAME)))
-                .thenReturn(buildSearchHits(List.of()));
+        FilterRequestDto normalized = searchService
+                .normalizeFilters(new FilterRequestDto(List.of(lower, upper), List.of()));
 
-        Filter conditionFilter = new Filter(FilterField.condition.fieldPath(), FilterOperator.term, List.of("NEW"), null, null);
-        Filter brandA = new Filter(FilterField.brand.fieldPath(), FilterOperator.term, List.of("Fairphone"), null, null);
-        Filter brandB = new Filter(FilterField.brand.fieldPath(), FilterOperator.term, List.of("Samsung"), null, null);
-        FilterRequestDto filters = new FilterRequestDto(List.of(conditionFilter),
-                List.of(new FilterRequestDto.FilterGroup(List.of(brandA), List.of()),
-                        new FilterRequestDto.FilterGroup(List.of(brandB), List.of())));
-
-        searchService.search(pageable, null, null, null, filters);
-
-        ArgumentCaptor<NativeQuery> queryCaptor = ArgumentCaptor.forClass(NativeQuery.class);
-        verify(repository).search(queryCaptor.capture(), eq(ProductRepository.MAIN_INDEX_NAME));
-        Criteria builtCriteria = ((CriteriaQuery) queryCaptor.getValue().getSpringDataQuery()).getCriteria();
-
-        List<String> fieldNames = expandCriteria(builtCriteria)
-                .map(Criteria::getField)
-                .filter(Objects::nonNull)
-                .map(Field::getName)
-                .toList();
-
-        assertThat(fieldNames).contains(FilterField.condition.fieldPath(), FilterField.brand.fieldPath());
-        assertThat(expandCriteria(builtCriteria).filter(Criteria::isOr)).isEmpty();
+        assertThat(normalized.filters()).hasSize(1);
+        Filter mergedRange = normalized.filters().getFirst();
+        assertThat(mergedRange.min()).isEqualTo(0.0);
+        assertThat(mergedRange.max()).isEqualTo(500.0);
     }
 
     @Test
-    void groupsUseAndWhileShouldClausesKeepOrSemantics() {
-        Pageable pageable = PageRequest.of(0, 5);
-
-        when(repository.search(any(NativeQuery.class), eq(ProductRepository.MAIN_INDEX_NAME)))
-                .thenReturn(buildSearchHits(List.of()));
-
+    void shouldClausesRequireAtLeastOneMatch() {
         Filter lowerPrice = new Filter(FilterField.price.fieldPath(), FilterOperator.range, null, 0.0, 500.0);
-        Filter upperPrice = new Filter(FilterField.price.fieldPath(), FilterOperator.range, null, 100.0, 1000.0);
-        Filter smallSize = new Filter("attributes.referentielAttributes.SCREENSIZE", FilterOperator.term,
-                List.of("32"), null, null);
-        Filter mediumSize = new Filter("attributes.referentielAttributes.SCREENSIZE", FilterOperator.term,
-                List.of("55"), null, null);
-
-        FilterRequestDto filters = new FilterRequestDto(List.of(), List.of(
-                new FilterRequestDto.FilterGroup(List.of(lowerPrice, upperPrice), List.of()),
-                new FilterRequestDto.FilterGroup(List.of(), List.of(smallSize, mediumSize))));
-
-        searchService.search(pageable, null, null, null, filters);
-
-        ArgumentCaptor<NativeQuery> queryCaptor = ArgumentCaptor.forClass(NativeQuery.class);
-        verify(repository).search(queryCaptor.capture(), eq(ProductRepository.MAIN_INDEX_NAME));
-        Criteria builtCriteria = ((CriteriaQuery) queryCaptor.getValue().getSpringDataQuery()).getCriteria();
-
-        List<String> fieldNames = expandCriteria(builtCriteria)
-                .map(Criteria::getField)
-                .filter(Objects::nonNull)
-                .map(Field::getName)
-                .toList();
-
-        assertThat(fieldNames).contains(FilterField.price.fieldPath(), "attributes.referentielAttributes.SCREENSIZE");
-        long orCount = expandCriteria(builtCriteria)
-                .filter(Criteria::isOr)
-                .count();
-        assertThat(orCount).isEqualTo(1);
-    }
-
-    @Test
-    void boundedRangeFiltersWithinGroupsPreserveBothLimits() {
-        Pageable pageable = PageRequest.of(0, 3);
-
-        when(repository.search(any(NativeQuery.class), eq(ProductRepository.MAIN_INDEX_NAME)))
-                .thenReturn(buildSearchHits(List.of()));
-
-        Filter priceRange = new Filter(FilterField.price.fieldPath(), FilterOperator.range, null, 100.0, 500.0);
-        Filter brandFilter = new Filter(FilterField.brand.fieldPath(), FilterOperator.term, List.of("Sony"), null, null);
-
+        Filter midPrice = new Filter(FilterField.price.fieldPath(), FilterOperator.range, null, 500.0, 1000.0);
         FilterRequestDto filters = new FilterRequestDto(List.of(),
-                List.of(new FilterRequestDto.FilterGroup(List.of(brandFilter, priceRange), List.of())));
+                List.of(new FilterRequestDto.FilterGroup(List.of(), List.of(lowerPrice, midPrice))));
 
-        searchService.search(pageable, null, null, null, filters);
+        Query query = searchService.buildProductSearchQuery(null, null, filters, true);
+        Optional<BoolQuery> groupQuery = extractFilters(query).stream()
+                .map(this::asBool)
+                .filter(Objects::nonNull)
+                .filter(bool -> bool.should() != null && !bool.should().isEmpty())
+                .findFirst();
 
-        ArgumentCaptor<NativeQuery> queryCaptor = ArgumentCaptor.forClass(NativeQuery.class);
-        verify(repository).search(queryCaptor.capture(), eq(ProductRepository.MAIN_INDEX_NAME));
-        Criteria builtCriteria = ((CriteriaQuery) queryCaptor.getValue().getSpringDataQuery()).getCriteria();
-
-        assertThat(hasFieldClauseWithValue(builtCriteria, FilterField.price.fieldPath(), 100.0)).isTrue();
-        assertThat(hasFieldClauseWithValue(builtCriteria, FilterField.price.fieldPath(), 500.0)).isTrue();
-        assertThat(hasFieldClauseWithValue(builtCriteria, FilterField.brand.fieldPath(), "Sony")).isTrue();
+        assertThat(groupQuery).isPresent();
+        BoolQuery boolQuery = groupQuery.orElseThrow();
+        assertThat(boolQuery.minimumShouldMatch()).isEqualTo("1");
+        assertThat(boolQuery.should()).hasSize(2);
     }
 
     @Test
-    void termsAggregationOnExcludedCausesIncludesMissingBucket() {
-        Pageable pageable = PageRequest.of(0, 5);
-
-        Product product = new Product(3L);
-        SearchHit<Product> hit = new SearchHit<>(ProductRepository.MAIN_INDEX_NAME, "3", null, 1f, null,
-                Map.of(), Map.of(), null, null, List.of(), product);
-
-        Aggregate termsAggregate = Aggregate.of(a -> a.sterms(st -> st.buckets(b -> b.array(List.of(
-                StringTermsBucket.of(bucket -> bucket.key(FieldValue.of(fv -> fv.stringValue("MODERATION"))).docCount(2L)),
-                StringTermsBucket.of(bucket -> bucket.key(FieldValue.of(fv -> fv.stringValue("ES-UNKNOWN"))).docCount(1L))
-        )))));
-        ElasticsearchAggregations aggregations = new ElasticsearchAggregations(Map.of(
-                "excludedStats", termsAggregate));
-
-        SearchHits<Product> hits = new SearchHitsImpl<>(1L, TotalHitsRelation.EQUAL_TO, 1f, Duration.ZERO, null, null,
-                List.of(hit), aggregations, null, null);
-        when(repository.search(any(NativeQuery.class), eq(ProductRepository.MAIN_INDEX_NAME))).thenReturn(hits, hits);
-
-        Agg aggregation = new Agg("excludedStats", FilterField.excludedCauses.fieldPath(), AggType.terms, null, null, null,
-                null);
-        AggregationRequestDto aggregationRequest = new AggregationRequestDto(List.of(aggregation));
-
-        SearchService.SearchResult result = searchService.search(pageable, null, null, aggregationRequest, null);
-
-        assertThat(result.aggregations()).hasSize(1);
-        List<AggregationBucketDto> buckets = result.aggregations().get(0).buckets();
-        assertThat(buckets).extracting(AggregationBucketDto::key)
-                .contains("MODERATION", "ES-UNKNOWN");
-        assertThat(buckets).anySatisfy(bucket -> {
-            if ("ES-UNKNOWN".equals(bucket.key())) {
-                assertThat(bucket.missing()).isTrue();
-                assertThat(bucket.count()).isEqualTo(1L);
-            }
-        });
-    }
-
-    @Test
-    void excludedAggregationIgnoresDefaultVisibilityFilter() {
+    void excludedAggregationUsesOverrideQueryWhenRequested() {
         Pageable pageable = PageRequest.of(0, 5);
 
         Aggregate visibleAggregate = Aggregate.of(a -> a.sterms(st -> st.buckets(b -> b.array(List.of()))));
@@ -312,8 +180,7 @@ class SearchServiceTest {
 
         SearchHits<Product> mainHits = buildSearchHits(List.of(new Product(5L)),
                 Map.of("excludedStats", visibleAggregate));
-        SearchHits<Product> overrideHits = buildSearchHits(List.of(),
-                Map.of("excludedStats", overrideAggregate));
+        SearchHits<Product> overrideHits = buildSearchHits(List.of(), Map.of("excludedStats", overrideAggregate));
 
         when(repository.search(any(NativeQuery.class), eq(ProductRepository.MAIN_INDEX_NAME)))
                 .thenReturn(mainHits, overrideHits);
@@ -325,24 +192,80 @@ class SearchServiceTest {
         SearchService.SearchResult result = searchService.search(pageable, null, null, aggregationRequest, null);
 
         assertThat(result.aggregations()).hasSize(1);
-        List<AggregationBucketDto> buckets = result.aggregations().get(0).buckets();
+        List<AggregationBucketDto> buckets = result.aggregations().getFirst().buckets();
         assertThat(buckets).extracting(AggregationBucketDto::key).contains("MODERATION", "LEGAL");
-        assertThat(buckets).anySatisfy(bucket -> {
-            if ("MODERATION".equals(bucket.key())) {
-                assertThat(bucket.count()).isEqualTo(2L);
-            }
-        });
 
         ArgumentCaptor<NativeQuery> queryCaptor = ArgumentCaptor.forClass(NativeQuery.class);
-        org.mockito.Mockito.verify(repository, times(2)).search(queryCaptor.capture(), eq(ProductRepository.MAIN_INDEX_NAME));
-        List<NativeQuery> executedQueries = queryCaptor.getAllValues();
+        verify(repository, times(2)).search(queryCaptor.capture(), eq(ProductRepository.MAIN_INDEX_NAME));
+        List<NativeQuery> executed = queryCaptor.getAllValues();
 
-        Criteria defaultCriteria = ((CriteriaQuery) executedQueries.get(0).getSpringDataQuery()).getCriteria();
-        assertThat(hasExcludedClauseWithValue(defaultCriteria, false)).isTrue();
+        assertThat(extractFilters(executed.get(0).getQuery()))
+                .anyMatch(filter -> isTermWithValue(filter, EXCLUDED_FIELD, false));
+        assertThat(extractFilters(executed.get(1).getQuery()))
+                .noneMatch(filter -> isTermWithValue(filter, EXCLUDED_FIELD, false));
+    }
 
-        Criteria adminCriteria = ((CriteriaQuery) executedQueries.get(1).getSpringDataQuery()).getCriteria();
-        assertThat(hasExcludedClauseWithValue(adminCriteria, false)).isFalse();
-        assertThat(hasExcludedClauseWithValue(adminCriteria, true)).isFalse();
+    private List<Query> extractFilters(Query query) {
+        BoolQuery bool = asBool(query);
+        if (bool == null || bool.filter() == null) {
+            return List.of();
+        }
+        return bool.filter();
+    }
+
+    private BoolQuery asBool(Query query) {
+        if (query == null || !query.isBool()) {
+            return null;
+        }
+        return query.bool();
+    }
+
+    private boolean isTermWithValue(Query query, String field, Object expected) {
+        if (query == null || !query.isTerm()) {
+            return false;
+        }
+        TermQuery term = query.term();
+        if (!field.equals(term.field())) {
+            return false;
+        }
+        FieldValue value = term.value();
+        return matchesFieldValue(value, expected);
+    }
+
+    private boolean isTermsQueryWithValue(Query query, String field, Object expected) {
+        if (query == null || !query.isTerms()) {
+            return false;
+        }
+        TermsQuery terms = query.terms();
+        if (!field.equals(terms.field()) || terms.terms() == null) {
+            return false;
+        }
+        List<FieldValue> values = terms.terms().value();
+        if (values == null) {
+            return false;
+        }
+        return values.stream().anyMatch(value -> matchesFieldValue(value, expected));
+    }
+
+    private boolean matchesFieldValue(FieldValue value, Object expected) {
+        if (expected instanceof Boolean booleanExpected && value.isBoolean()) {
+            return value.booleanValue() == booleanExpected;
+        }
+        if (expected instanceof Number number) {
+            if (value.isDouble()) {
+                return Objects.equals(value.doubleValue(), number.doubleValue());
+            }
+            if (value.isLong()) {
+                return Objects.equals(value.longValue(), number.longValue());
+            }
+        }
+        if (value.isString()) {
+            return Objects.equals(value.stringValue(), String.valueOf(expected));
+        }
+        if (value.isAny()) {
+            return Objects.equals(value.anyValue(), expected);
+        }
+        return false;
     }
 
     private SearchHits<Product> buildSearchHits(List<Product> products) {
@@ -350,69 +273,13 @@ class SearchServiceTest {
     }
 
     private SearchHits<Product> buildSearchHits(List<Product> products, Map<String, Aggregate> aggregationMap) {
-        List<SearchHit<Product>> hits = new ArrayList<>();
-        for (Product product : products) {
-            String documentId = product.getId() == null ? "0" : product.getId().toString();
-            hits.add(new SearchHit<>(ProductRepository.MAIN_INDEX_NAME, documentId, null, 1f, null,
-                    Map.of(), Map.of(), null, null, List.of(), product));
-        }
+        List<SearchHit<Product>> hits = products.stream()
+                .map(product -> new SearchHit<>(ProductRepository.MAIN_INDEX_NAME,
+                        product.getId() == null ? "0" : product.getId().toString(), null, 1f, null, Map.of(), Map.of(), null,
+                        null, List.of(), product))
+                .toList();
         ElasticsearchAggregations aggregations = aggregationMap == null ? null : new ElasticsearchAggregations(aggregationMap);
         return new SearchHitsImpl<>(hits.size(), TotalHitsRelation.EQUAL_TO, 1f, Duration.ZERO,
                 null, null, hits, aggregations, null, null);
     }
-
-    private boolean hasExcludedClauseWithValue(Criteria criteria, boolean expectedValue) {
-        return hasFieldClauseWithValue(criteria, EXCLUDED_FIELD, expectedValue);
-    }
-
-    private boolean hasFieldClauseWithValue(Criteria criteria, String fieldName, Object expectedValue) {
-        return expandCriteria(criteria)
-                .filter(entry -> entry.getField() != null && fieldName.equals(entry.getField().getName()))
-                .flatMap(entry -> entry.getQueryCriteriaEntries().stream())
-                .map(CriteriaEntry::getValue)
-                .flatMap(this::flattenCriteriaValue)
-                .anyMatch(value -> matchesExpectedValue(value, expectedValue));
-    }
-
-    private boolean matchesExpectedValue(Object value, Object expectedValue) {
-        if (expectedValue instanceof Boolean booleanExpected) {
-            if (value instanceof Boolean booleanValue) {
-                return booleanValue == booleanExpected;
-            }
-            if (value instanceof String stringValue) {
-                return Boolean.parseBoolean(stringValue) == booleanExpected;
-            }
-            return Objects.equals(value, booleanExpected);
-        }
-        return Objects.equals(value, expectedValue);
-    }
-
-    private Stream<Criteria> expandCriteria(Criteria root) {
-        if (root == null) {
-            return Stream.empty();
-        }
-        Deque<Criteria> toVisit = new ArrayDeque<>();
-        Set<Criteria> visited = new HashSet<>();
-        List<Criteria> collected = new ArrayList<>();
-        toVisit.push(root);
-        while (!toVisit.isEmpty()) {
-            Criteria current = toVisit.pop();
-            if (!visited.add(current)) {
-                continue;
-            }
-            collected.add(current);
-            current.getCriteriaChain().forEach(toVisit::push);
-            current.getSubCriteria().forEach(toVisit::push);
-        }
-        return collected.stream();
-    }
-
-    private Stream<?> flattenCriteriaValue(Object value) {
-        if (value instanceof Collection<?> collection) {
-            return collection.stream();
-        }
-        return Stream.ofNullable(value);
-    }
-
-
 }
